Fix default spacing of 15y badge

--- a/src/modules/better-ui/styles/profile.css
+++ b/src/modules/better-ui/styles/profile.css
@@ -500,3 +500,7 @@ a.friendsProfileView-randomFriend {
   width: 50px;
   height: 50px;
 }
+
+.loyaltyBadgeView.badgeLevel15 .loyaltyBadgeView-years-text {
+  top: 14px;
+}
